--- a/.config/waypaper/config.ini
+++ b/.config/waypaper/config.ini
@@ -2,7 +2,7 @@
 language = en
 folder = ~/Pictures/Wallpaper
 monitors = All
-wallpaper = ~/Pictures/Wallpaper/1.jpg
+wallpaper = ~/Pictures/Wallpaper/wall.jpg
 show_path_in_tooltip = True
 backend = swww
 fill = fill
