--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -28,10 +28,9 @@
             "format": "\u001b[90m┌─────────Hardware─────────────────────────────┐"
         },
         {
-            "type": "host",
-            "key": "󰌢 Laptop",
-            "keyColor": "green",
-            "format": "{name}"
+            "type": "custom",
+            "key": "󰌢 PC",
+            "keyColor": "green"
         },
         {
             "type": "display",
@@ -116,11 +115,11 @@
             "keyColor": "magenta",
             "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
         },
-        // {
-        //     "type": "uptime",
-        //     "key": "│  Uptime",
-        //     "keyColor": "magenta"
-        // },
+         {
+             "type": "uptime",
+             "key": "│  Uptime",
+             "keyColor": "magenta"
+         },
         {
             "type": "custom",
             "format": "\u001b[90m└──────────────────────────────────────────────┘"
