--- a/.config/fuzzel/matugen/colors.ini
+++ b/.config/fuzzel/matugen/colors.ini
@@ -1,9 +1,15 @@
+# Fuzzel Colors
+# Generated with Matugen
+
 [colors]
-background = 101418f3
-text = e0e2e9ff
-border = 8a919cff
-selection = 272a2fff
-selection-text = e0e2e9ff
-selection-match = ffb86cff
-prompt = c0c7d2ff
-input = 9acbffff
+background=131314ff
+text=e4e2e2ff
+prompt=c3c7caff
+placeholder=ddc1b5ff
+input=bdc8d0ff
+match=ddc1b5ff
+selection = 2a2a2aff
+selection-text = e4e2e2ff
+selection-match = ddc1b5ff
+counter=c3c7caff
+border=bdc8d0ff
