--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,17 +1,1 @@
-font_family      family="Liberation Mono"
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
-font_size 11
-
-editor nvim
-background_opacity 1
-window_margin_width 15
-hide_window_decorations yes 
-
-cursor_trail 3
-
-active_tab_font_style bold
-inactive_tab_font_style normal
-
-include ~/.config/kitty/mocha.conf
+../../dotfiles/.config/kitty/kitty.conf
