--- a/.config/kitty/colors.conf
+++ b/.config/kitty/colors.conf
@@ -1,41 +1,33 @@
-cursor #e4e2e2
-cursor_text_color #c3c7ca
+#  ┳┳┓┏┓┏┳┓┳┳┏┓┏┓┳┓  ┓┏┓┳┏┳┓┏┳┓┓┏
+#  ┃┃┃┣┫ ┃ ┃┃┃┓┣ ┃┃━━┃┫ ┃ ┃  ┃ ┗┫
+#  ┛ ┗┛┗ ┻ ┗┛┗┛┗┛┛┗  ┛┗┛┻ ┻  ┻ ┗┛
+#                                
 
+
+# Core Colors
+background            #1f2020
 foreground            #e4e2e2
-background            #131314
-selection_foreground  #2d3133
-selection_background  #c3c7ca
-url_color             #bdc8d0
+selection_foreground  #b5cbcd
+selection_background  #203436
+cursor                #b5cbcd
+cursor_text_color     #131414
 
-# black
-color8   #262626
-color0   #4c4c4c
+# Regular Colors
+color0  #b5cbcd               
+color1  #ffb4ab                 
+color2  #b5cbcd               
+color3  #b5cbcd                
+color4  #b5cbcd  
+color5  #b5cbcd 
+color6  #c0c8c8             
+color7  #e4e2e2            
 
-# red
-color1   #ac8a8c
-color9   #c49ea0
-
-# green
-color2   #8aac8b
-color10  #9ec49f
-
-# yellow
-color3   #aca98a
-color11  #c4c19e
-
-# blue
-/* color4  #8f8aac */
-color4  #bdc8d0
-color12 #a39ec4
-
-# magenta
-color5   #ac8aac
-color13  #c49ec4
-
-# cyan
-color6   #8aacab
-color14  #9ec3c4
-
-# white
-color15   #e7e7e7
-color7  #f0f0f0
+# Bright Colors
+color8  #b5cbcd        
+color9  #ffb4ab                  
+color10 #b5cbcd                
+color11 #b5cbcd              
+color12 #eafdff   
+color13 #dae2e2 
+color14 #c0c8c8              
+color15 #e4e2e2    
