--- a/.config/matugen/templates/fuzzel.ini
+++ b/.config/matugen/templates/fuzzel.ini
@@ -2,14 +2,14 @@
 # Generated with Matugen
 
 [colors]
-background={{colors.background.default.hex_stripped}}ff
-text={{colors.on_surface.default.hex_stripped}}ff
-prompt={{colors.secondary.default.hex_stripped}}ff
 placeholder={{colors.tertiary.default.hex_stripped}}ff
-input={{colors.primary.default.hex_stripped}}ff
-match={{colors.tertiary.default.hex_stripped}}ff
-selection = {{ colors.surface_container_high.default.hex | replace:"#","" }}ff
-selection-text = {{ colors.on_surface.default.hex | replace:"#","" }}ff
-selection-match = {{ colors.tertiary.default.hex | replace:"#","" }}ff
+background = {{colors.surface.default.hex_stripped}}f3
+text = {{colors.on_surface.default.hex_stripped}}ff
+border = {{colors.primary.default.hex_stripped}}ff
 counter={{colors.secondary.default.hex_stripped}}ff
-border={{colors.primary.default.hex_stripped}}ff
+selection = {{colors.surface_container_high.default.hex_stripped}}ff
+selection-text = {{colors.primary.default.hex_stripped}}ff
+input = {{colors.primary.default.hex_stripped}}ff
+match = {{colors.secondary.default.hex_stripped}}ff
+selection-match = {{colors.secondary.default.hex_stripped}}ff
+prompt = {{colors.on_surface_variant.default.hex_stripped}}ff
