--- a/.config/waypaper/config.ini
+++ b/.config/waypaper/config.ini
@@ -2,13 +2,13 @@
 language = en
 folder = ~/Pictures/Wallpaper
 monitors = All
-wallpaper = ~/Pictures/Wallpaper/wall.jpg
+wallpaper = ~/Pictures/Wallpaper/113.jpg
 show_path_in_tooltip = True
 backend = swww
 fill = fill
 sort = name
-color = #FFFFFF
-subfolders = False
+color = #C0BFBC
+subfolders = True
 all_subfolders = False
 show_hidden = True
 show_gifs_only = False
