--- a/.config/kitty/colors.conf
+++ b/.config/kitty/colors.conf
@@ -1,33 +1,40 @@
-#  ┳┳┓┏┓┏┳┓┳┳┏┓┏┓┳┓  ┓┏┓┳┏┳┓┏┳┓┓┏
-#  ┃┃┃┣┫ ┃ ┃┃┃┓┣ ┃┃━━┃┫ ┃ ┃  ┃ ┗┫
-#  ┛ ┗┛┗ ┻ ┗┛┗┛┗┛┛┗  ┛┗┛┻ ┻  ┻ ┗┛
-#                                
+cursor #e2e3d9
+cursor_text_color #c4c8ba
 
+foreground            #e2e3d9
+background            #11140e
+selection_foreground  #29341f
+selection_background  #becbae
+url_color             #add18e
 
-# Core Colors
-background            #1f2020
-foreground            #e4e2e2
-selection_foreground  #b5cbcd
-selection_background  #203436
-cursor                #b5cbcd
-cursor_text_color     #131414
+# Black 
+color0  #33362f
+color8  #c4c8ba
 
-# Regular Colors
-color0  #b5cbcd               
-color1  #ffb4ab                 
-color2  #b5cbcd               
-color3  #b5cbcd                
-color4  #b5cbcd  
-color5  #b5cbcd 
-color6  #c0c8c8             
-color7  #e4e2e2            
+# Red 
+color1  #ffb4ab
+color9  #ffb4ab
 
-# Bright Colors
-color8  #b5cbcd        
-color9  #ffb4ab                  
-color10 #b5cbcd                
-color11 #b5cbcd              
-color12 #eafdff   
-color13 #dae2e2 
-color14 #c0c8c8              
-color15 #e4e2e2    
+# Green 
+color2  #add18e
+color10 #314e19
+
+# Yellow 
+color3  #a0cfce
+color11 #1e4e4d
+
+# Blue 
+color4  #becbae
+color12 #3f4a34
+
+# Magenta
+color5  #a0cfce
+color13 #bbecea
+
+# Cyan
+color6  #8e9286
+color14 #a0cfce
+
+# White
+color7  #e2e3d9
+color15 #2e312a
