--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,139 +1,88 @@
 {
-    "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
-    "logo": {
-        "padding": {
-            "top": 2,
-            "right": 2,
-            "left": 1
-        }
+  "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
+
+  "logo": {
+        "source": "/home/falguren/.config/fastfetch/miku5.png",
+    	"height": 19,
+    "padding": {
+	    "top": 2,
+            "left": 3
+    }
+  },
+
+  "display": {
+    "bar": {
+      "width": 15
     },
-    // "logo": {
-    //     "source": "~/.config/fastfetch/chad.png",
-    //     "type": "auto",
-    //     "height": 15,
-    //     "width": 32,
-    //     "padding": {
-    //         "top": 4,
-    //         "right": 2,
-    //         "left": 2
-    //     }
-    // },
-    "display": {
-        "separator": " "
+    "percent": {
+      "type": 3,
+      "color": {
+        "green": "red",
+        "yellow": "red"
+      }
     },
-    "modules": [
-        "break",
+    "key": {
+      "width": 22
+    },
+    "color": "white",
+    "separator": " -~> "
+  },
+
+  "modules": [
+    "break",
+
+    {
+      "type": "title",
+      "format": "{6}{7}{#yellow}{8}{#}"
+    },
+    "separator",
+    {
+      "type": "os",
+      "format": "{#blue}{4}{#} {?6}({#yellow}{6}{#}){?}"
+    },
+    "kernel",
         {
-            "type": "custom",
-            "format": "\u001b[90m┌─────────Hardware─────────────────────────────┐"
+            "type": "packages"
         },
-        {
-            "type": "custom",
-            "key": "󰌢 PC",
-            "keyColor": "green"
-        },
-        {
-            "type": "display",
-            "key": "│ ├ Display",
-            "keyColor": "green",
-            "format": "{type} {width}x{height} @ {refresh-rate}Hz {inch}″"
-        },
-        {
-            "type": "cpu",
-            "key": "│ ├󰻠 CPU",
-            "keyColor": "green",
-            "format": "{name}"
-        },
+    "wm",
+    "shell",
+    "display",
+    "break",
+
+    {
+      "type": "cpu",
+      "format": "{name}"
+    },
         {
             "type": "gpu",
-            "key": "│ ├󰍛 GPU",
-            "keyColor": "green",
-            "format": "{vendor} {name}"
+            "format": "{name}"
         },
-        {
-            "type": "disk",
-            "key": "│ ├ Disk",
-            "keyColor": "green",
-            "format": "{size-used} / {size-total} ({size-percentage}) {filesystem}"
-        },
-        {
-            "type": "memory",
-            "key": "│ └󰘚 RAM",
-            "keyColor": "green"
-        },
-        {
-            "type": "custom",
-            "format": "\u001b[90m└──────────────────────────────────────────────┘"
-        },
-        "break",
-        {
-            "type": "custom",
-            "format": "\u001b[90m┌─────────Software─────────────────────────────┐"
-        },
-        {
-            "type": "os",
-            "key": " OS",
-            "keyColor": "yellow"
-        },
-        {
-            "type": "de",
-            "key": "│ ├ DE",
-            "keyColor": "yellow"
-        },
-        {
-            "type": "wm",
-            "key": "│ ├ VM",
-            "keyColor": "yellow"
-        },
-        {
-            "type": "kernel",
-            "key": "│ ├ Kernel",
-            "keyColor": "yellow"
-        },
-        {
-            "type": "packages",
-            "key": "│ ├󰏖 Packages",
-            "keyColor": "yellow"
-        },
-        {
-            "type": "shell",
-            "key": "│ └ Shell",
-            "keyColor": "yellow"
-        },
-        {
-            "type": "custom",
-            "format": "\u001b[90m└──────────────────────────────────────────────┘"
-        },
-        "break",
-        {
-            "type": "custom",
-            "format": "\u001b[90m┌─────────Misc─────────────────────────────────┐"
-        },
-        {
+	    "break",
+    {
+      "type": "memory",
+      "key": "Ram",
+      "format": "{percentage-bar} {used} {#yellow}({percentage}) {#white}ddr4"
+    },
+    {
+      "type": "disk",
+      "format": "{size-percentage-bar} {size-used} {#yellow}({size-percentage}) {#white}{filesystem}"
+    },
+    "break",
+    "uptime",
+    {
+      "type": "datetime",
+      "timeout": 2000
+    },
+          	 {
             "type": "command",
-            "key": "│ 󰔟 OS Age",
-            "keyColor": "magenta",
-            "text": "birth_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - birth_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
+            "key": "Time Life",
+            "text": "modify_install=$(stat -c %W /); current=$(date +%s); time_progression=$((current - modify_install)); days_difference=$((time_progression / 86400)); echo $days_difference days"
         },
-        {
-             "type": "uptime",
-             "key": "│  Uptime",
-             "keyColor": "magenta"
-        },
-        {
-            "type": "custom",
-            "format": "\u001b[90m└──────────────────────────────────────────────┘"
-        },
-        {
+    "break",
+            {
             "type": "colors",
-            "paddingLeft": 15,
-            "symbol": "circle",
-            "block": {
-                "width": 20
-            }
-        }
-    ]
+            "symbol": "circle"
+        },
+	"break"
+  ]
 }
-
-
-
