--- a/.config/fuzzel/fuzzel.ini
+++ b/.config/fuzzel/fuzzel.ini
@@ -7,3 +7,4 @@ icon-theme=Papirus
 exit-on-keyboard-focus-loss=no
 fields=name
 include = "/home/falguren/.config/fuzzel/matugen/colors.ini"
+include=~/.config/fuzzel/themes/noctalia
