--- a/.config/matugen/config.toml
+++ b/.config/matugen/config.toml
@@ -9,6 +9,48 @@ version_check = false
 
 # Templates
 
+# Qt5
+[templates.qt5]
+input_path = '~/.config/matugen/templates/qtct-colors.conf'
+output_path = '~/.config/qt5ct/colors/matugen-qt5ct.conf'
+
+# Qt6
+[templates.qt6]
+input_path = '~/.config/matugen/templates/qtct-colors.conf'
+output_path = '~/.config/qt6ct/colors/matugen-qt6ct.conf'
+
+# GTK3
+[templates.gtk3]
+input_path = '~/.config/matugen/templates/gtk-colors.css'
+output_path = '~/.config/gtk-3.0/gtk.css'
+post_hook = 'gsettings set org.gnome.desktop.interface gtk-theme ""; gsettings gtk-theme adw-gtk3-dark'
+
+# Gtk4
+[templates.gtk4]
+input_path = '~/.config/matugen/templates/gtk-colors.css'
+output_path = '~/.config/gtk-4.0/gtk.css'
+
+# Fuzzel
+[templates.fuzzel]
+input_path = '~/.config/matugen/templates/fuzzel.ini'
+output_path = '~/.config/fuzzel/matugen/colors.ini'
+
+# Ghostty
+#[templates.ghostty]
+#input_path = '~/.config/matugen/templates/ghostty'
+#output_path = '~/.config/ghostty/themes/matugen'
+#post_hook = 'pkill -SIGUSR2 ghostty'
+
+# Btop
+[templates.btop]
+input_path = '~/.config/matugen/templates/btop.theme'
+output_path = '~/.config/btop/themes/matugen.theme'
+
+# Yazi
+[templates.yazi]
+input_path = '~/.config/matugen/templates/yazi-theme.toml'
+output_path = '~/.config/yazi/theme.toml'
+
 # Waybar
 [templates.waybar]
 input_path = '~/.config/matugen/templates/waybar.css'
@@ -21,52 +63,11 @@ input_path = '~/.config/matugen/templates/swaync.css'
 output_path = '~/.config/swaync/matugen/matugen-swaync.css'
 post_hook = 'swaync-client -rs'
 
-# Gtk3
-[templates.gtk3]
-input_path = '~/.config/matugen/templates/gtk-colors.css'
-output_path = '~/.config/gtk-3.0/gtk.css'
-
-# Gtk4
-[templates.gtk4]
-input_path = '~/.config/matugen/templates/gtk-colors.css'
-output_path = '~/.config/gtk-4.0/gtk.css'
-
-# Qt5
-[templates.qt5]
-input_path = '~/.config/matugen/templates/qtct-colors.conf'
-output_path = '~/.config/qt5ct/colors/matugen-qt5ct.conf'
-
-# Qt6
-[templates.qt6]
-input_path = '~/.config/matugen/templates/qtct-colors.conf'
-output_path = '~/.config/qt6ct/colors/matugen-qt6ct.conf'
-
-# Kvantum
-[templates.kvantum]
-input_path = '~/.config/matugen/templates/matugen.kvconfig'
-output_path = '~/.config/Kvantum/matugen/matugen.kvconfig'
-
-# Cava
-[templates.cava]
-input_path = '~/.config/matugen/templates/cava'
-output_path = '~/.config/cava/matugen/config'
-
-# Fuzzel
-[templates.fuzzel]
-input_path = '~/.config/matugen/templates/fuzzel.ini'
-output_path = '~/.config/fuzzel/matugen/colors.ini'
-
-# Kitty
 [templates.kitty]
 input_path = '~/.config/matugen/templates/kitty-colors.conf'
 output_path = '~/.config/kitty/colors.conf'
+post_hook = 'pkill -SIGUSR1 kitty'
 
-# Btop
-[templates.btop]
-input_path = '~/.config/matugen/templates/btop.theme'
-output_path = '~/.config/btop/themes/matugen.theme'
-
-# Yazi
-[templates.yazi]
-input_path = '~/.config/matugen/templates/yazi-theme.toml'
-output_path = '~/.config/yazi/theme.toml'
+[templates.vesktop]
+input_path = '~/.config/matugen/templates/midnight-discord.css'
+output_path = '~/.config/Equicord/themes/midnight-discord.css'
