--- a/.config/matugen/templates/kitty-colors.conf
+++ b/.config/matugen/templates/kitty-colors.conf
@@ -1,33 +1,40 @@
-#  ┳┳┓┏┓┏┳┓┳┳┏┓┏┓┳┓  ┓┏┓┳┏┳┓┏┳┓┓┏
-#  ┃┃┃┣┫ ┃ ┃┃┃┓┣ ┃┃━━┃┫ ┃ ┃  ┃ ┗┫
-#  ┛ ┗┛┗ ┻ ┗┛┗┛┗┛┛┗  ┛┗┛┻ ┻  ┻ ┗┛
-#                                
+cursor {{colors.on_surface.default.hex}}
+cursor_text_color {{colors.on_surface_variant.default.hex}}
 
+foreground            {{colors.on_surface.default.hex}}
+background            {{colors.surface.default.hex}}
+selection_foreground  {{colors.on_secondary.default.hex}}
+selection_background  {{colors.secondary.default.hex}}
+url_color             {{colors.primary.default.hex}}
 
-# Core Colors
-background            {{ colors.surface_container.default.hex }}
-foreground            {{ colors.on_surface.default.hex }}
-selection_foreground  {{ colors.primary.default.hex }}
-selection_background  {{ colors.on_primary.default.hex }}
-cursor                {{ colors.primary.default.hex }}
-cursor_text_color     {{ colors.surface.default.hex }}
+# Black 
+color0  {{colors.surface_container_highest.default.hex}}
+color8  {{colors.on_surface_variant.default.hex}}
 
-# Regular Colors
-color0  {{ colors.primary.default.hex }}               
-color1  {{ colors.error.default.hex }}                 
-color2  {{ colors.primary.default.hex }}               
-color3  {{ colors.primary.default.hex }}                
-color4  {{ colors.primary.default.hex }}  
-color5  {{ colors.primary.default.hex }} 
-color6  {{ colors.secondary.default.hex }}             
-color7  {{ colors.on_surface.default.hex }}            
+# Red 
+color1  {{colors.error.default.hex}}
+color9  {{ colors.error.default.hex }}
 
-# Bright Colors
-color8  {{ colors.primary.default.hex }}        
-color9  {{ colors.error.default.hex }}                  
-color10 {{ colors.primary.default.hex }}                
-color11 {{ colors.primary.default.hex }}              
-color12 {{ colors.on_primary_container.default.hex }}   
-color13 {{ colors.on_secondary_container.default.hex }} 
-color14 {{ colors.secondary.default.hex }}              
-color15 {{ colors.on_surface.default.hex }}    
+# Green 
+color2  {{colors.primary.default.hex}}
+color10 {{colors.primary_container.default.hex}}
+
+# Yellow 
+color3  {{colors.tertiary.default.hex}}
+color11 {{colors.tertiary_container.default.hex}}
+
+# Blue 
+color4  {{colors.secondary.default.hex}}
+color12 {{colors.secondary_container.default.hex}}
+
+# Magenta
+color5  {{colors.tertiary.default.hex}}
+color13 {{colors.on_tertiary_container.default.hex}}
+
+# Cyan
+color6  {{colors.outline.default.hex}}
+color14 {{colors.tertiary.default.hex}}
+
+# White
+color7  {{colors.on_surface.default.hex}}
+color15 {{colors.inverse_on_surface.default.hex}}
