--- a/.config/swaync/config.json
+++ b/.config/swaync/config.json
@@ -7,7 +7,7 @@
     "control-center-margin-right": 0,
     "control-center-margin-top": 0,
     "control-center-width": 400,
-    "control-center-positionX": "left",
+    "control-center-positionX": "right",
     "control-center-positionY": "top",
     "fit-to-screen": false,
     "hide-on-action": false,
@@ -23,7 +23,7 @@
     "control-center-margin-top": 0,
 
     "positionX": "right",
-    "positionY": "bottom",
+    "positionY": "top",
     "timeout": 3,
     "timeout-critical": 0,
     "timeout-low": 4,
