--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,73 +1,172 @@
-// See: https://github.com/Alexays/Waybar/wiki/Module:-Workspaces
-// See: https://github.com/mhkarimi1383/waybar/blob/main/config.jsonc
-{	
-		"width": 1600,
-		"height": 25,
-    		"layer": "top",
-    		"position": "top",
-		"exclusive": true,
-		"passthrough": false,
-		"margin-top": 6,
-		"spacing": 8,
-		"fixed-center": true,
-		"reload_style_on_change": true,
-		"modules-left": [
-			"custom/notifications",
-			"custom/sep",
-			"tray",
-			"custom/sep",
-			"niri/language",
-			"niri/window"
-		    ],
-		"modules-center": [
-			"clock"
-			],
-		"modules-right": [
-			"privacy", "custom/sep",
-			"custom/sep",
-			"pulseaudio", "memory",
-			"cpu"
-			],
- 		/*"custom/sep": {
-			"format": "|",
-			"tooltip": false,
-		},*/
-"niri/window": {
+
+{
+  "layer": "top",
+  "position": "top",
+  "spacing": 0,
+  "fixed-center": true,
+  "reload_style_on_change": true,
+  "modules-left": [
+    "custom/separator",
+    "niri/workspaces",
+    "custom/separator",
+    "niri/language",
+    "custom/separator",
+    "niri/window"
+  ],
+  "modules-center": [
+	  "clock", "privacy"
+  ],
+  "modules-right": [
+    "group/tray-expander",
+    "custom/separator",
+    "cpu",
+    "custom/separator",
+    "memory",
+    "custom/separator",
+    "pulseaudio",
+    "custom/brightness",
+    "custom/separator",
+    "custom/notification",
+    "custom/separator"
+  ],
+  // Modules configuration
+  "niri/window": {
     "format": "{app_id}",
     "icon": true,
-    "icon-size": 14,
+    "icon-size": 16,
     "seperate-outputs": false,
 "rewrite": {
 	"io.github.kukuruzka165.materialgram": "materialgram",
 	"com.obsproject.Studio": "obs",
-	"com.github.th_ch.youtube_music": "ytm"
+	"com.github.th_ch.youtube_music": "ytm",
+	"com.mitchellh.ghostty": "ghostty",
+	"org.gnome.Nautilus": "nautilus"
 }
   },
-
-"cava": {
-                "framerate": 60,
-                "autosens": 1,
-                "bars": 8,
-                "lower_cutoff_freq": 50,
-                "higher_cutoff_freq": 10000,
-                "method": "pulse",
-                "source": "auto",
-                "stereo": true,
-                "bar_delimiter": 0,
-                "noise_reduction": 0.30,
-                "input_delay": 0,
-                "format-icons" : ["", "▁", "▂", "▃", "▄", "▅", "▆", "▇", "█" ]
-           },
-
-"niri/workspaces": {
-  "disable-scroll": false,
-  "show-special": false,
-	"format": "{icon}",
-		"format-icons": {
-		"active": "1",
-		"default": "0"
-		}
-},
+  "niri/language": {
+  	"format": "{}",
+	"format-en": "en",
+	"format-ru": "ru",
+	"format-uk": "ua"
+	},
+  "custom/notification": {
+      "tooltip": false,
+      "format": "{icon} ",
+      "format-icons": {
+        "notification": "",
+        "none": "",
+        "dnd-notification": "",
+        "dnd-none": "",
+        "inhibited-notification": "",
+        "inhibited-none": "",
+        "dnd-inhibited-notification": "",
+        "dnd-inhibited-none": ""
+      },        "return-type": "json",
+      "exec-if": "which swaync-client",
+      "exec": "swaync-client -swb",
+      "escape": true,
+      "on-click": "swaync-client -t -sw",
+      "on-click-right": "swaync-client -d -sw"
+  },
+  "group/tray-expander": {
+    "orientation": "inherit",
+    "drawer": {
+      "transition-duration": 300,
+      "children-class": "tray-group-item"
+    },
+    "modules": [
+      "custom/expand-icon",
+      "tray"
+    ]
+  },
+  "custom/expand-icon": {
+    "format": "󰻋 ",
+    "tooltip": false
+  },
+  "tray": {
+    "icon-size": 16,
+    "spacing": 13
+  },
+  "clock": {
+    "format": "{:%H:%M %d/%m}",
+    //"format-alt": "{:%d/%m/%y}",
+    "timezone": "Europe/Moscow",
+    "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+    "interval": 1,
+    "tooltip": true
+  },
+  /*"backlight": {
+    "format": "  {percent}%",
+    "format-icons": ["󰃞", "󰃟", "󰃠"],
+    "scroll-step": 1,
+    "tooltip": false
+  },
+  "battery": {
+    "states": {
+        "warning": 15,
+        "critical": 8
+    },
+    "format": "{icon}",
+    "format-charging": " {icon}",
+    "format-plugged": " {icon}",
+    "format-icons": ["󰂎", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"],
+    "interval": 3,
+ 		"format-time": "{H}h {M}m",
+		"tooltip-format": "{capacity} {power}w {time}",
+		"tooltip-format-charging": "{capacity}% (charging) {time}",
+  },*/
+  "network": {
+    "format": "{icon}",
+    "format-wifi": "{icon}",
+    "format-ethernet": " ",
+    "tooltip-format": " ",
+    "format-linked": " ",
+    "format-disconnected": "󰤮 ",
+    "tooltip": false,
+    "on-click": "kitty sh -c nmtui",
+    "format-icons": ["󰤯 ", "󰤟 ", "󰤢 ", "󰤥 ", "󰤨 "]
+  },
+   "pulseaudio": {
+    "scroll-step": 5,
+     "format": "<span font='Symbols Nerd Font'>{icon}</span> {volume}%",
+     "format-muted": "<span font='Symbols Nerd Font'> </span> Muted",
+     "format-source": "<span font='Symbols Nerd Font'></span> {volume}%",
+     "format-source-muted": "<span font='Symbols Nerd Font'></span>",
+"format-icons": {
+         "default": ["", "", ""]
+    },
+    "on-click": "pavucontrol",
+    "tooltip-format": "{volume}%",
+    "tooltip": false
+  },
+  "custom/brightness": {
+    "format": "   {text}%",
+    "signal": 8,
+    "exec": "~/.config/waybar/brightness-control.sh get",
+    "on-scroll-up": "~/.config/waybar/brightness-control.sh up",
+    "on-scroll-down": "~/.config/waybar/brightness-control.sh down",
+    "on-click": "~/.config/waybar/brightness-control.sh left_click",
+    "on-click-right":  "~/.config/waybar/brightness-control.sh right_click",
+    "tooltip": false
+  },
+  "custom/bluetooth": {
+    "format": "",
+    "on-click": "blueberry",
+    "tooltip": false
+  },
+  "custom/separator": {
+    "format": "|",
+    "tooltip": false
+  },
+  "cpu": {
+     "interval": 5,
+     "format": "<span font='Symbols Nerd Font'> </span> {usage}%"  
+  },
+   "memory": {
+     "interval": 5,
+     "format": "<span font='Symbols Nerd Font'> </span> {percentage}%",
+         "tooltip-format": "Usage: {used:0.1f}G / {total:0.1f}G"
+  },
 	"privacy": {
 			"icon-spacing": 10,
 			"icon-size": 12,
@@ -95,66 +194,4 @@
 				}
 			]
 		},
-/*	"network": {
-        	"format-wifi": "󰤯",
-        	"format-ethernet": "󰈀",
-        	"format-linked": "󰈀",
-        	"format-disconnected": "󰤮",
-          "on-click": "python ~/.config/rofi/network/network.py",
-	  "on-click-right": "/mnt/bine4/scripts/wallpaperkonachan.bash"
-	}, */
-
- 
-  "custom/notifications": {
-    "tooltip": false,
-    "format": "{icon}",
-    "format-icons": {
-      "notification": "<span foreground='#DB4740'></span>",
-      "none": "",
-      "dnd-notification":"<span foreground='#DB4740'></span>",
-      "dnd-none": ""
-    },
-    "return-type": "json",
-    "exec-if": "which swaync-client",
-    "exec": "swaync-client -swb",
-    "on-click": "swaync-client -t -sw",
-    "on-click-right": "swaync-client -d -sw",
-    "escape": true
-  },
-	"tray": {
-		"icon-size": 16,
-		"spacing": 6
-	},
-    
-  "clock": {
-    "format": "{:%H:%M:%S  %d.%m.%y}",
-	"timezone": "Europe/Moscow",
-    "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-	"interval": 1
-  },
-
-  "pulseaudio": {
-		"format": "{volume}% {icon}",
-        	"format-muted": "MUTE",
-		"format-icons": {
-			"default": [" ", " ", " "]},
-			"on-click": "pavucontrol",
-	         "tooltip-format": "{volume}%"
-  },
- 
-        	
-    	"niri/language": {
-        	"format": "{}",
-			"format-en": "us",
-			"format-ru": "ru",
-			"format-uk": "ua"
-			    	},
-  "memory": {
-    "interval": 5,
-    "format": "Mem {}%"
-  },
-  "cpu": {
-    "interval": 5,
-    "format": "CPU {usage:2}%"
-  }
 }
